3.1.4/README.md
## 3_1_4 Передача объектов функциям в качестве параметров и возврат
<details>
<summary>Введение</summary>
 
Конструктор копии вызывается в случае, когда один объект инициализирует другой:
- Один объект явно инициализирует другой объект, как например, в объявлении;
- При создании копии объекта при передаче объекта к функции в качестве параметра по значению

Конструкторы копии не оказывают никакого влияния на операции присваивания.
</details>

### Постановка задачи
Дан объект следующей конструкции:

В закрытом доступе имеется массив целого типа и поле его длины. Количество элементов массива четное и больше двух.

Объект имеет функциональность:
- Конструктор по умолчанию, вначале работы выдает сообщение;
- Параметризированный конструктор, передается целочисленный параметр. Параметр должен иметь значение больше 2 и быть четным. Вначале работы выдает сообщение;
- **Конструктор копии, обеспечивает создание копии объекта в новой области памяти. Вначале работы выдает сообщение;**
- Метод деструктор, который в начале работы выдает сообщение;
- **Метод который создает целочисленный массив в закрытой области, согласно ранее заданной размерности.**
- Метод ввода данных для созданного массива;
- Метод 1, который суммирует значения очередной пары элементов и сумму присваивает первому элементу пары. Например, пусть массив состоит из элементов {1,2,3,4}. В результате суммирования пар получим массив {3,2,7,4};
- Метод 2, который умножает значения очередной пары элементов и результат присваивает первому элементу пары. Например, пусть массив состоит из элементов {1,2,3,4}. В результате умножения пар получим массив {2,2,12,4};
- Метод который, суммирует значения элементов массива и возвращает это значение;
- **Метод последовательного вывода содержимого элементов массива, которые разделены ТРЕМЯ пробелами**

**Разработать функцию func**, которая имеет один целочисленный параметр, содержащий размерность массива. В функции должен быть реализован алгоритм:
1. Создание локального объекта с использованием параметризированного конструктора.
2. Возврат созданного локального объекта.

В основной функции реализовать алгоритм:
1. Ввод размерности массива.
2. Если размерность массива некорректная, вывод сообщения и завершить работу алгоритма.
3. Вывод значения размерности массива.
4. **Создание первого объекта.**
5. Присвоение первому объекту результата работы функции func с аргументом, содержащим значение размерности массива.
6. Для первого объекта вызов метода создания массива.
7. Для первого объекта вызов метода ввода данных массива.
8. Для первого объекта вызов метода 2.
9. Инициализация второго объекта первым объектом.
10. Вызов метода 1 для второго объекта.
11. Вывод содержимого массива первого объекта.
12. Вывод суммы элементов массива первого объекта.
13. Вывод содержимого массива второго объекта.
14. Вывод суммы элементов массива второго объекта.

### Входные данные
```
«Целое число»
«Целое число» «Целое число» . . .
```

Пример:
```
4
3 5 1 2
```

### Выходные данные
Если введенная размерность массива допустима, то в первой строке выводится это значение:

```
«Целое число»
```
Если введенная размерность массива не больше двух или нечетная, то в первой строке выводится некорректное значение и вопросительный знак:

```
«Целое число»?
```

Конструктор по умолчанию в начале работы с новой строки выдает сообщение:

```
Default constructor
```

Параметризированный конструктор в начале работы с новой строки выдает сообщение:

```
Constructor set
```

Конструктор копии в начале работы с новой строки выдает сообщение:

```
Copy constructor
```

Деструктор в начале работы с новой строки выдает сообщение:

```
Destructor
```

Метод последовательного вывода содержимого элементов массива, с новой строки выдает:
```
«Целое число»   «Целое число»   «Целое число»   . . .
```

Пример:
```
4
Default constructor
Constructor set
Destructor
Copy constructor
15   5   2   2
24
20   5   4   2
31
Destructor
Destructor
```

### 2 МЕТОД РЕШЕНИЯ
Для решения задачи используется:
- Класс MyClass
- Оператор цикла for
- Условный оператор if
- Объект стандартного потока ввода-вывода cin, cout
- Заголовочный файл

Методы:
- Конструктор MyClass
- - Функционал: Вывод "Default constructor"
- Параметризированный конструктор MyClass
- - Функционал:
- - - Вывод "Constructor set"
- - - Определяет размерность целочисленного массива из закрытой области
- Конструктор копии объекта MyClass
- - Функционал:
- - - Вывод "Copy constructor"
- - - Создание копии целочисленного массива arr в закрытой области, согласно ранее заданной размерности
- Деструктор MyClass
- - Функционал: вывод "Destructor"
- Метод input()
- - Функционал: ввода данных для создания массива arr размерности n, с элементами n
- Метод method1()
- - Функционал: суммирует значения очередной пары элементов и сумму присваивает первому элементу пары
- Метод method2()
- - Функционал: умножает значения очередной пары элементов и результат присваивает первому элементу пары
- Метод sum()
- - Функционал: суммирует значения элементов массива и возвращает это значение
- Метод print()
- - Функционал: последовательный вывод содержимого элементов массива, которые разделены тремя пробелами
- Скрытое свойство - массив arr целого типа
- Скрытое свойство - поле его длины size целого типа

### 3 ОПИСАНИЕ АЛГОРИТМОВ
#### Функция
- Имя: main
- Возвращаемое значение: целый тип
- Функционал: Основная функция

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Ввод целочисленной переменной size | 2
| 2 | (size % 2 != 0) or (size <= 2) | Вывод "size?" | 0
| | | | 3
| 3 | | Вывод значения размерности массива | 4
| 4 | | Создание первого объекта с аргументом размерности массива | 5
| 5 | | Удаление первого объекта | 6
| 6 | | Вызов метода ввода данных для создания массива arr размерности n, с элементами n | 7
| 7 | | Вызов функции передача в качестве аргумента объекта | 0
                                   
#### Конструктор
- Класс объекта: MyClass
- Модификатор: public
- Функционал: конструктор по умолчанию, в начале работы выдает сообщение

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Вывод "Default constructor" | 0
                                   
#### Конструктор
- Класс объекта: MyClass
- Модификатор: public
- Параметры: size
- Функционал: создание объекта

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Создание целочисленного массива arr целого типа размерности size | 2
| 2 | | Вывод "Constructor set" | 3
| 3 | | Определяется размерность целочисленного массива из закрытой области | 0
                                   
#### Конструктор
- Класс объекта: MyClass
- Модификатор: public
- Параметры: MyClass & obj
- Функционал: создание копии объекта

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Вывод "Copy constructor" | 2
| 2 | | Определение переменной size | 3
| 3 | | Создание целочисленного массива arr целого типа размерности size | 0
  
#### Деструктор
- Класс объекта: MyClass
- Модификатор: public
- Функционал: удаление объекта

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Вывод "Destructor" | 2
| 2 | | Удаление объекта arr | 0

### 6 ТЕСТИРОВАНИЕ
| Входные данные | Выходные данные |
| --- | ----- |
|  4 <br> 3 5 1 2 | 4 <br> Default constructor <br>Constructor set <br> Destructor <br> Copy constructor <br> 15  5   2   2 <br> 24 <br> 20   5   4   2 <br> 31 <br> Destructor <br> Destructor |
| 1 | 1? |