3.1.5/README.md
## 3_1_5 Возврат указателя на объект из функции

### Постановка задачи
Дан объект следующей конструкции:

В закрытом доступе имеется массив целого типа и поле его длины. Количество элементов массива четное и больше двух.

Объект имеет функциональность:
- конструктор по умолчанию, вначале работы выдает сообщение;
- параметризированный конструктор, передается целочисленный параметр. Параметр должен иметь значение больше 2 и быть четным. Вначале работы выдает сообщение;
- конструктор копии, обеспечивает создание копии объекта в новой области памяти. Вначале работы выдает сообщение;
- метод деструктор, который в начале работы выдает сообщение;
- метод который создает целочисленный массив в закрытой области, согласно ранее заданной размерности.
- метод ввода значений элементов созданного массива;
- метод 1, который суммирует значения очередной пары элементов и сумму присваивает первому элементу пары. Например, пусть массив состоит из элементов {1,2,3,4}. В результате суммирования пар получим массив {3,2,7,4};
- метод 2, который умножает значения очередной пары элементов и результат присваивает первому элементу пары. Например, пусть массив состоит из элементов {1,2,3,4}. В результате умножения пар получим массив {2,2,12,4};
- метод, который суммирует значения элементов массива и возвращает это значение;
- метод последовательного вывода содержимого элементов массива, которые разделены **ДВУМЯ** пробелами;
- **метод, который возвращает значение указателя на массив из закрытой области**;
- **метод, который присваивает значение указателя массива из закрытой области**.

Назовём класс описания данного объекта cl_obj (для примера, у вас он может называться иначе).

Разработать функцию func, которая имеет один целочисленный параметр, содержащий размерность массива. В функции должен быть реализован алгоритм:

1. Инициализация указателя на объект класса cl_obj адресом объекта, созданного с использованием параметризированного конструктора.
2. С использованием указателя на объект класса cl_obj вызов метода создания массива.
3. С использованием указателя на объект класса cl_obj вызов метода ввода значений элементов массива.
4. С использованием указателя на объект класса cl_obj вызов метода 2.
5. Возврат указателя на объект класса cl_obj.

В основной функции реализовать алгоритм:

1. Ввод размерности массива.
2. Если размерность массива некорректная, вывод сообщения и завершить работу алгоритма.
3. Вывод значения размерности массива.
4. Объявить первый указатель на объект класса cl_obj.
5. Присвоение первому указателю результата работы функции func с аргументом, содержащим значение размерности массива.
6. С использованием первого указателя вызов метода 1.
7. Инициализация второго указателя на объект класса cl_obj адресом объекта, созданного с использованием конструктора копии с аргументом первого объекта.
8. С использованием второго указателя вызов метода 2.
9. Вывод содержимого массива первого объекта.
10. Вывод суммы элементов массива первого объекта.
11. Вывод содержимого массива второго объекта.
12. Вывод суммы элементов массива второго объекта.
13. Второму объекту присвоить первый объект.
14. С использованием первого указателя вызов метода 1.
15. Вывод содержимого массива второго объекта.
16. Вывод суммы элементов массива второго объекта.
17. Удалит первый объект.
18. Удалить второй объект.

Добавить в этот алгоритм пункты, которые обеспечат корректное завершение работы программы.

### Входные данные
```
4
3 5 1 2
```

### Выходные данные
```c++
4 // введенная размерность массива допустима, то в первой строке выводится это значение:
Constructor set // Параметризированный конструктор
Copy constructor // Конструктор копии
20  5  4  2
31
100  5  8  2
115
100  5  8  2
115
Destructor
Destructor
```

### 2 МЕТОД РЕШЕНИЯ
Для решения задачи используется:
- Класс MyClass
- Оператор цикла for
- Условный оператор if
- Объект стандартного потока ввода-вывода cin, cout
- Заголовочный файл

Методы:
- Конструктор MyClass
- - Функционал: Вывод "Default constructor"
- Параметризированный конструктор MyClass
- - Функционал:
- - - Вывод "Constructor set"
- - - Определяет размерность целочисленного массива из закрытой области
- Конструктор копии объекта MyClass
- - Функционал:
- - - Вывод "Copy constructor"
- - - Создание копии целочисленного массива arr в закрытой области, согласно ранее заданной размерности
- Деструктор MyClass
- - Функционал: вывод "Destructor"
- Метод input()
- - Функционал: ввода данных для создания массива arr размерности n, с элементами n
- Метод method1()
- - Функционал: суммирует значения очередной пары элементов и сумму присваивает первому элементу пары
- Метод method2()
- - Функционал: умножает значения очередной пары элементов и результат присваивает первому элементу пары
- Метод sum()
- - Функционал: суммирует значения элементов массива и возвращает это значение
- Метод print()
- - Функционал: последовательный вывод содержимого элементов массива, которые разделены тремя пробелами
- Метод create()
- - Функционал: создает целочисленный массив в закрытой области, согласно ранее заданной размерности
- Скрытое свойство - массив arr целого типа
- Скрытое свойство - поле его длины size целого типа

### 3 ОПИСАНИЕ АЛГОРИТМОВ
#### Функция
- Имя: main
- Возвращаемое значение: целый тип
- Функционал: Основная функция

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Ввод размерности массива | 2
| 2 | size % 2 != 0 or size <= 2 | Вывод "size?" | 0
| | | | 3
| 3 | | Вывод значения размерности массива | 4
| 4 | | Объявить первый указатель на объект класса cl_obj | 5
| 5 | | Присвоение первому указателю результата работы функции func с аргументом, содержащим значение размерности массива | 6
| 6 | | С использованием первого указателя вызов метода 1 | 7
| 7 | | Инициализация второго указателя на объект класса cl_obj адресом объекта, созданного с использованием конструктора копии с аргументом первого объекта | 8
| 8 | | С использованием второго указателя вызов метода 2 | 9
| 9 | | Вывод содержимого массива первого объекта | 10
| 10 | | Вывод суммы элементов массива первого объекта | 11
| 11 | | Вывод содержимого массива второго объекта | 12
| 12 | | Вывод суммы элементов массива второго объекта | 13
| 13 | | Второму объекту присвоить первый объект | 14
| 14 | | С использованием первого указателя вызов метода 1 | 15
| 15 | | Вывод содержимого массива второго объекта | 16
| 16 | | Вывод суммы элементов массива второго объекта | 17
| 17 | | Удалить первый объект | 18
| 18 | | Удалить второй объект | 0

#### Конструктор
- Класс объекта: MyClass
- Модификатор: public
- Функционал: конструктор по умолчанию, в начале работы выдает сообщение

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Вывод "Default constructor" | 0
                                   
#### Конструктор
- Класс объекта: MyClass
- Модификатор: public
- Параметры: size
- Функционал: создание объекта

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Создание целочисленного массива arr целого типа размерности size | 2
| 2 | | Вывод "Constructor set" | 3
| 3 | | Определяется размерность целочисленного массива из закрытой области | 0
                                   
#### Конструктор
- Класс объекта: MyClass
- Модификатор: public
- Параметры: MyClass & obj
- Функционал: создание копии объекта

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Вывод "Copy constructor" | 2
| 2 | | Определение переменной size | 3
| 3 | | Создание целочисленного массива arr целого типа размерности size | 0
  
#### Деструктор
- Класс объекта: MyClass
- Модификатор: public
- Функционал: удаление объекта

| # | Предикант | Действия | # Перехода | Комментарий
| --- | ----- | ------ | ---- | -- |
| 1 | | Вывод "Destructor" | 2
| 2 | | Удаление объекта arr | 0

### 4 БЛОК-СХЕМА
![image](image_2.png)

### 6 ТЕСТИРОВАНИЕ
| Входные данные | Выходные данные |
| --- | ----- |
|  4 <br> 3 5 1 2 | 4 <br> Constructor set <br> Copy constructor <br> 20  5  4  2 <br> 31 <br> 100  5  8  2 <br> 115 <br> 100  5  8  2 <br> 115 <br> Destructor <br> Destructor |
| 1 | 1? |
